2009-02-11  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Csparse.R (replCmat): another check for 'has.x'
	* tests/indexing.R: very large (very sparse) sub-indexing.

2009-01-30  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.999375-20
	* man/spqr.Rd: disable example on Windows for now

	* inst/test-tools.R (checkMatrix): simpler for "logical" pMatrix.

	* R/ngTMatrix.R: fix ngT -> nge / lge coercion, and
	* tests/Simple.R: adapt test.

	* R/pMatrix.R: coercion to "matrix": more sensical to coerce to logical
	instead of 0/1 integer.   This a mild back-compatibility breach.
	* man/pMatrix-class.Rd: adapt, including example
	* R/sparseMatrix.R (printSpMatrix): print as logical, too.

2009-01-29  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Auxiliaries.R (geClass): define for "pMatrix"
	* R/pMatrix.R: pMatrix  ->  ngeMatrix coercion
	* man/pMatrix-class.Rd:

	* DESCRIPTION (Version): 0.999375-19  considering release.

	* R/ngTMatrix.R: coercing correctly to ngeMatrix via lge*.

	* man/dgTMatrix-class.Rd: remove no-more-existing coercion method;
	mention a bit less, and note.

	* R/diagMatrix.R: ensure that <diagonal> * <dgeMatrix> is diagonal
	even with new method dispatch

	* R/Matrix.R (.M.sub.i.logical): change comments only, and extend
	error message which is never called currently.

	* R/Ops.R (Ops.x.x): fix for new "inherited method" dispatch

2009-01-28  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/spqr.R: put spqr() / class "SPQR" related code in one file for now.
	* NAMESPACE: export "SPQR" class
	* man/SPQR-class.Rd: document it

2009-01-27  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Auxiliaries.R (is.na_nsp): should produce "nsCMatrix" only when
	dimnames are symmetric too.

	* R/sparseQR.R (solve): method for (<sparseQR>, <ANY>)

2009-01-26  Douglas Bates <bates@stat.wisc.edu>

	* src/cs_utils.c (Matrix_as_cs): in diagU2N case: Force sorted
	columns after expanding unit diagonal.
